# kill_switch

./: .gitignore  README.md  gen_icons.py  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AnalogDial.tsx  CountUpTimer.tsx  HistoryPanel.tsx  PomodoroTimer.tsx  QuoteTicker.tsx  RobotMascot.tsx
src/data/: quotes.ts
src/hooks/: useStorage.ts  useTauri.ts
src/styles/: global.css  layout.css
